修改一些小地方

--- a/layout/_partial/index-cover.ejs
+++ b/layout/_partial/index-cover.ejs
@@ -132,7 +132,7 @@ var coverPostsCount = coverPosts.length;
                     <% } %>
                     </div>
                     <div class="cover-btns">
-                        <a href="<%- url_for(post.path) %>" class="waves-effect waves-light btn">
+                        <a href="<%- url_for(post.path) %>" class="waves-effect waves-light btn" target="_blank">
                             <i class="icon fa fa-eye fa-fw"></i><%- __('readMore') %>
                         </a>
                     </div>
