--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -40,6 +40,7 @@
                 function createtime() {
                     var grt = new Date("<%- theme.time %>");
                     now.setTime(now.getTime() + 250);
+                    year = now.getFullYear();
                     days = (now - grt) / 1000 / 60 / 60 / 24;
                     dnum = Math.floor(days);
                     hours = (now - grt) / 1000 / 60 / 60 - (24 * dnum);
