--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -74,8 +74,9 @@
             </script>
             <br>
             <% if (theme.icp.enable) { %>
-            <span id="icp"><img src="/medias/icp.png" style="vertical-align: text-bottom;" /><a
-                    href="<%- theme.icp.url %>" target="_blank"><%- theme.icp.text %></a></span>
+            <span id="icp"><img src="/medias/icp.png" style="vertical-align: text-bottom;" />
+                <a href="<%- theme.icp.url %>" target="_blank"><%- theme.icp.text %></a>
+            </span>
             <% } %>
         </div>
         <div class="col s12 m4 l4 social-link <%- socialClass %>"><%- partial('_partial/social-link') %></div>
