打字副标题支持多个标题

--- a/layout/_partial/bg-cover-content.ejs
+++ b/layout/_partial/bg-cover-content.ejs
@@ -15,7 +15,7 @@
                 <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
                 <script>
                     var typed = new Typed("#typed", {
-                        strings: ['<%= theme.subtitle.sub1 %>', '<%= theme.subtitle.sub2 %>'],
+                        strings: '<%= theme.subtitle.sub %>'.split(","),
                         startDelay: 300,
                         typeSpeed: 100,
                         loop: true,
