--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -85,7 +85,7 @@
                         </div>
                         <div class="publish-info">
                             <span class="publish-date">
-                                <i class="fa fa-clock-o fa-fw icon-date"></i><%= date(post.date, config.date_format) %>
+                                <i class="fa fa-clock fa-fw icon-date"></i><%= date(post.date, config.date_format) %>
                             </span>
                             <span class="publish-author">
                                 <% if (post.categories && post.categories.length > 0) { %>
