--- a/layout/_widget/recommend.ejs
+++ b/layout/_widget/recommend.ejs
@@ -38,7 +38,7 @@
 %>
 
 <% if (theme.recommend.showTitle) { %>
-<div class="title"><i class="fa fa-thumbs-o-up"></i>&nbsp;&nbsp;<%- __('recommendedPosts') %></div>
+<div class="title"><i class="fa fa-thumbs-up"></i>&nbsp;&nbsp;<%- __('recommendedPosts') %></div>
 <% } %>
 <div class="row">
 <% if (topPostsCount % 2 === 0) { %>
