--- a/layout/tag.ejs
+++ b/layout/tag.ejs
@@ -51,7 +51,7 @@
                     <div class="card-content article-content">
                         <div class="publish-info">
                             <span class="publish-date">
-                                <i class="fa fa-clock-o fa-fw icon-date"></i><%= date(post.date, config.date_format) %>
+                                <i class="fa fa-clock fa-fw icon-date"></i><%= date(post.date, config.date_format) %>
                             </span>
                             <span class="publish-author">
                                 <% if (post.categories && post.categories.length > 0) { %>
