--- a/layout/friends.ejs
+++ b/layout/friends.ejs
@@ -191,7 +191,7 @@
         <div class="card">
             <div class="card-content">
                 <div class="tag-title center-align">
-                    <i class="fa fa-address-book"></i>&nbsp;&nbsp;<%= __('friends') %>
+                    <i class="fas fa-address-book"></i>&nbsp;&nbsp;<%= __('friends') %>
                 </div>
                 <article id="friends-link">
                     <% if (site.data && site.data.friends) { %>
