--- a/layout/_partial/social-link.ejs
+++ b/layout/_partial/social-link.ejs
@@ -1,47 +1,47 @@
 <% if (theme.socialLink.github) { %>
     <a href="<%= theme.socialLink.github %>" class="tooltipped" target="_blank" data-tooltip="访问我的GitHub" data-position="top" data-delay="50">
-        <i class="fa fa-github"></i>
+        <i class="fab fa-github"></i>
     </a>
 <% } %>
 
 <% if (theme.socialLink.email) { %>
     <a href="mailto:<%= theme.socialLink.email %>" class="tooltipped" target="_blank" data-tooltip="邮件联系我" data-position="top" data-delay="50">
-        <i class="fa fa-envelope-open"></i>
+        <i class="fas fa-envelope-open"></i>
     </a>
 <% } %>
 
 <% if (theme.socialLink.facebook) { %>
     <a href="<%= theme.socialLink.facebook %>" class="tooltipped" target="_blank" data-tooltip="关注我的Facebook: <%= theme.socialLink.facebook %>" data-position="top" data-delay="50">
-        <i class="fa fa-facebook"></i>
+        <i class="fab fa-facebook-f"></i>
     </a>
 <% } %>
 
 <% if (theme.socialLink.twitter) { %>
     <a href="<%= theme.socialLink.twitter %>" class="tooltipped" target="_blank" data-tooltip="关注我的Twitter: <%= theme.socialLink.twitter %>" data-position="top" data-delay="50">
-        <i class="fa fa-twitter"></i>
+        <i class="fab fa-twitter"></i>
     </a>
 <% } %>
 
 <% if (theme.socialLink.qq) { %>
     <a href="tencent://AddContact/?fromId=50&fromSubId=1&subcmd=all&uin=<%= theme.socialLink.qq %>" class="tooltipped" target="_blank" data-tooltip="QQ联系我: <%= theme.socialLink.qq %>" data-position="top" data-delay="50">
-        <i class="fa fa-qq"></i>
+        <i class="fab fa-qq"></i>
     </a>
 <% } %>
 
 <% if (theme.socialLink.weibo) { %>
     <a href="<%= theme.socialLink.weibo %>" class="tooltipped" target="_blank" data-tooltip="关注我的微博: <%= theme.socialLink.weibo %>" data-position="top" data-delay="50">
-        <i class="fa fa-weibo"></i>
+        <i class="fab fa-weibo"></i>
     </a>
 <% } %>
 
 <% if (theme.socialLink.zhihu) { %>
     <a href="<%= theme.socialLink.zhihu %>" class="tooltipped" target="_blank" data-tooltip="关注我的知乎: <%= theme.socialLink.zhihu %>" data-position="top" data-delay="50">
-        <i class="fa fa-inverse">知</i>
+        <i class="fab fa-zhihu1">知</i>
     </a>
 <% } %>
 
 <% if (theme.socialLink.rss.enable) { %>
     <a href="<%- url_for('/atom.xml') %>" class="tooltipped" target="_blank" data-tooltip="RSS 订阅" data-position="top" data-delay="50">
-        <i class="fa fa-rss"></i>
+        <i class="fas fa-rss"></i>
     </a>
 <% } %>
