--- a/layout/_partial/valine.ejs
+++ b/layout/_partial/valine.ejs
@@ -239,7 +239,7 @@
 </div>
 
 <script src="/libs/valine/av-min.js"></script>
-<script src="<%- theme.libs.libs.valine %>"></script>
+<script src="<%- theme.libs.js.valine %>"></script>
 <script>
     new Valine({
         el: '#vcomments',
