--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -8,7 +8,7 @@
             |&nbsp;Theme&nbsp;<a href="https://github.com/blinkfox/hexo-theme-matery" target="_blank">Matery</a>
             <br>
             <% if (theme.wordCount.enable && theme.wordCount.totalCount) { %>
-            &nbsp;<i class="fas fa-area-chart"></i>&nbsp;站点总字数:&nbsp;<span
+            &nbsp;<i class="fas fa-chart-area"></i>&nbsp;站点总字数:&nbsp;<span
                 class="white-color"><%= totalcount(site) %></span>&nbsp;字
             <% } %>
             <% let socialClass = '' %>
